--- a/src/components/logo/logo.scss
+++ b/src/components/logo/logo.scss
@@ -1,8 +1,54 @@
 .logo {
-    margin: 0;
-    width: 30em;
-    height: 30em;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
+    // margin: 0;
+    // width: 30em;
+    // height: 30em;
+    // box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
 
-    background-color: pink;
+    .inner {
+        h1 {
+            margin: 0
+        }
+    }
+
+    .name {
+        transform: scale(1.4);
+        display: block;
+        text-shadow: 0.18em 0.18em 0 rgba(0, 0, 0, 0.05);
+        perspective: 100px;
+
+        .letter {
+            // Variable declarations
+            --scale: 1;
+            --rotate: 0deg;
+            --translateX: 0;
+            --translateY: 0;
+            --rotateX: 0deg;
+            //////////////////
+            font-size: 3.3rem;
+            line-height: 1;
+            display: inline-block;      // Without this, no transforms will work.
+            transform: scale(var(--scale)) translateY(var(--translateY));
+            // transition: transform 0.7s cubic-bezier(0.45, 0, 0.07, 1);
+            transition: transform 0.5s ease-in-out;
+            
+    
+            // &.m:hover {
+            //     --scale: 1.1;
+            //     --translateY: -0.5em;
+            // }
+            // &.i:hover {
+            //     --scale: 1.1;
+            //     --translateY: -0.5em;
+            // }
+
+            &:hover {
+                --scale: 1.1;
+                --translateY: -0.4em;
+            }
+        }
+      }
+
+      
+
+    
 }
