Still trying to play around with the logo-name. Added Sanity backend mesnet-backend

--- a/src/components/layout/layout.scss
+++ b/src/components/layout/layout.scss
@@ -4,7 +4,7 @@
   margin-top: clamp(2rem, 10vw, 12rem);
   background: red;
   background-size: 1500px;
-  padding: 5px;
+  padding: 5px;       // Fallback if browser doesn't support clamp()
   padding: clamp(5px, 1vw, 25px);
   box-shadow: 0 0 5px 3px rgba(0, 0, 0, 0.044);
   border: 5px solid white;
