--- a/src/components/logo/logo.scss
+++ b/src/components/logo/logo.scss
@@ -1,8 +1,5 @@
 .logo {
-    // margin: 0;
-    // width: 30em;
-    // height: 30em;
-    // box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
+
 
     .inner {
         h1 {
@@ -11,7 +8,7 @@
     }
 
     .name {
-        transform: scale(1.4);
+        transform: scale(1.1);
         display: block;
         text-shadow: 0.18em 0.18em 0 rgba(0, 0, 0, 0.05);
         perspective: 100px;
@@ -24,26 +21,22 @@
             --translateY: 0;
             --rotateX: 0deg;
             //////////////////
-            font-size: 3.3rem;
+            // font-size: 3rem;
+            font-size: 2rem;
             line-height: 1;
             display: inline-block;      // Without this, no transforms will work.
             transform: scale(var(--scale)) translateY(var(--translateY));
             // transition: transform 0.7s cubic-bezier(0.45, 0, 0.07, 1);
-            transition: transform 0.5s ease-in-out;
+            transition: transform 0.3s linear;
             
-    
-            // &.m:hover {
-            //     --scale: 1.1;
-            //     --translateY: -0.5em;
-            // }
-            // &.i:hover {
-            //     --scale: 1.1;
-            //     --translateY: -0.5em;
-            // }
 
             &:hover {
-                --scale: 1.1;
-                --translateY: -0.4em;
+                --scale: 1;
+                --translateY: -0.3em;
+            }
+            @media screen and (max-width: 800px) {
+                font-size: 1.5rem;
+                --translateY: -0.3em;
             }
         }
       }
