--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -6,3 +6,12 @@
     font-named-instance: 'Regular';
     src: url(/fonts/roboto/Roboto-Regular.woff2) format('woff2');
 }
+
+h1, h2, h3, h4, h5, h6 {
+    font-weight: normal;
+    margin: 0;
+}
+
+.center {
+    text-align: center;
+}
