--- a/src/components/logo/logo.scss
+++ b/src/components/logo/logo.scss
@@ -1,5 +1,6 @@
 .logo {
 
+    // display: inline-block;
 
     .inner {
         h1 {
@@ -7,10 +8,19 @@
         }
     }
 
+    // .logo-box {
+    //     display: inline-flex;
+    //     justify-content: center;
+    //     align-items: center;
+    //     height: 7rem;
+    //     width: 7rem;
+    //     background-color: var(--slate);
+    // }
     .name {
-        transform: scale(1.1);
+        // transform: scale(1.1);
         display: block;
         text-shadow: 0.18em 0.18em 0 rgba(0, 0, 0, 0.05);
+        // text-shadow: white 0.5px 0.5px, white -0.5px -0.5px, white -0.5px 0.5px, white 0.5px -0.5px;
         perspective: 100px;
 
         .letter {
@@ -22,17 +32,16 @@
             --rotateX: 0deg;
             //////////////////
             // font-size: 3rem;
-            font-size: 2rem;
+            font-size: 3rem;
             line-height: 1;
             display: inline-block;      // Without this, no transforms will work.
             transform: scale(var(--scale)) translateY(var(--translateY));
-            // transition: transform 0.7s cubic-bezier(0.45, 0, 0.07, 1);
             transition: transform 0.3s linear;
             
 
             &:hover {
                 --scale: 1;
-                --translateY: -0.3em;
+                --translateY: -0.2em;
             }
             @media screen and (max-width: 800px) {
                 font-size: 1.5rem;
