--- a/src/styles/constants.scss
+++ b/src/styles/constants.scss
@@ -1,5 +1,10 @@
-$red: #FF4949;
-$black: #2E2E2E;
+// $red: #FF4949;
+$red: #FF0000;
+$darkRed: #A81313;  // rgb(168, 19, 19)
+$blueGray: #1A202C; // rgb(26, 32, 44);
+$darkGray: #2E2E2E;
+$slate: #1F1F1F;    // rgb(31, 31, 31);
+$black: #101010;
 $yellow: #ffc600;
 $white: #fff;
-$grey: #efefef;
+$grite: #d4d2d2;    // rgb(212, 210, 210);
