--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -1,11 +1,48 @@
 @font-face {
-    font-family: 'roboto-reg';
+    font-family: 'Roboto-Condensed-Reg';
     font-weight: 100 900;
     font-display: swap;
     font-style: normal;
-    font-named-instance: 'Regular';
-    src: url(/fonts/roboto/Roboto-Regular.woff2) format('woff2');
+    src: url(/fonts/RobotoCondensed-Regular.woff2) format('woff2');
 }
+
+@font-face {
+    font-family: 'Roboto-Condensed-Bold';
+    font-display: swap;
+    src: url(/fonts/RobotoCondensed-Bold.woff2) format('woff2');
+}
+
+@font-face {
+    font-family: 'Roboto-Condensed-Italic';
+    font-display: swap;
+    src: url(/fonts/RobotoCondensed-Italic.woff2) format('woff2');
+}
+
+@font-face {
+    font-family: 'Barlow-Reg';
+    font-weight: 100 900;
+    font-display: swap;
+    src: url(/fonts/Barlow-Regular.woff2) format('woff2');
+}
+
+@font-face {
+    font-family: 'Barlow-ExtraLight';
+    font-display: swap;
+    src: url(/fonts/Barlow-ExtraLight.woff2) format('woff2');
+}
+
+@font-face {
+    font-family: 'Inter-Reg';
+    font-display: swap;
+    src: url(/fonts/Inter-Regular.woff2) format('woff2');
+}
+
+@font-face {
+    font-family: 'Inter-Medium';
+    font-display: swap;
+    src: url(/fonts/Inter-Medium.woff2) format('woff2');
+}
+
 
 h1, h2, h3, h4, h5, h6 {
     font-weight: normal;
