Making progress. now have the SEO component made. extended our page queries. added a static query hook for smaller components. Pretty much finished with the individual Post template .. but need to check the styling .. also need to finish the main blog page with a list of posts.

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -12,7 +12,7 @@
     --white: #{$white};
     --grite: #{$grite};
 
-    font-family: 'Roboto-Condensed-Reg', BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", -apple-system, sans-serif;
+    font-family: 'Inter-Reg', 'Roboto-Condensed-Reg', BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", -apple-system, sans-serif;
   }
   html {
     // background-image: url(${bg});
