--- a/src/components/logo/logo.scss
+++ b/src/components/logo/logo.scss
@@ -1,6 +1,6 @@
 .logo {
 
-    // display: inline-block;
+    font-family: 'Futura-T-Bold', 'Inter-Bold', 'Roboto-Condensed-Reg', BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", -apple-system, sans-serif;
 
     .inner {
         h1 {
@@ -13,6 +13,7 @@
         display: block;
         text-shadow: 0.18em 0.18em 0 rgba(0, 0, 0, 0.05);
         perspective: 100px;
+        letter-spacing: 0.1em;
 
         .letter {
             // Variable declarations
@@ -23,7 +24,7 @@
             --rotateX: 0deg;
             //////////////////
             // font-size: 3rem;
-            font-size: 3rem;
+            font-size: 3.2rem;
             line-height: 1;
             display: inline-block;      // Without this, no transforms will work.
             transform: scale(var(--scale)) translateY(var(--translateY));
