Finished Blog page component, added boilerplate into rest of site.. tweeked styling again. preparing to deploy on aws :

--- a/src/templates/post-template/post-template.scss
+++ b/src/templates/post-template/post-template.scss
@@ -4,10 +4,20 @@
     grid-template-rows: auto 1fr auto;
 
     h1 {
-        color: var(--darkRed);
+        font-size: 5rem;
+        color: var(--darkGray);
     }
 
-    time {
-        margin-left: 80%;
-    }
+    
+}
+
+.blog-post-template-titlebox {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+.blog-post-template-provider {
+    margin-top: 6rem;
 }
