--- a/src/components/blog-list-item/blog-list-item.scss
+++ b/src/components/blog-list-item/blog-list-item.scss
@@ -1,9 +1,21 @@
 
 .blog-list-item-box {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin: 2rem;
-    padding: 2rem;
+    box-sizing: border-box;
+    margin-bottom: 4rem;
+    font-size: 1.9rem;
+
+    a {
+        color: var(--blueGray);
+        text-decoration: none;
+        &:hover {
+            text-decoration: underline;
+            color: var(--darkRed);
+        }
+    }
+}
+
+.blog-list-item-date-tags {
+    margin-top: 0.5rem;
+    box-sizing: inherit;
+    font-size: 1.6rem;
 }
