--- a/src/components/layout/layout.scss
+++ b/src/components/layout/layout.scss
@@ -1,10 +1,10 @@
 .site-container {
-  max-width: 1280px;
+  max-width: 1100px;
   margin: 5rem auto 4rem auto;
   margin-top: clamp(5rem, 4vw, 7rem);
   background: white;
-  padding: 5px;       // Fallback if browser doesn't support clamp()
-  padding: clamp(5px, 0.5vw, 12px);
+  padding: 2rem;       // Fallback if browser doesn't support clamp()
+  padding: clamp(2rem, 1vw, 4rem);
   // box-shadow: 0 0 5px 3px rgba(0, 0, 0, 0.044);
   // border: 5px solid white;
   @media (max-width: 1100px) {
