--- a/src/components/logo/logo.scss
+++ b/src/components/logo/logo.scss
@@ -1,7 +1,5 @@
 .logo {
-
-    font-family: 'Futura-T-Bold', 'Inter-Bold', 'Roboto-Condensed-Reg', BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", -apple-system, sans-serif;
-
+    font-family: 'Barlow-Medium', 'Roboto-Condensed-Reg', 'Inter-Reg', BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", -apple-system, sans-serif;
     .inner {
         h1 {
             margin: 0
@@ -13,7 +11,7 @@
         display: block;
         text-shadow: 0.18em 0.18em 0 rgba(0, 0, 0, 0.05);
         perspective: 100px;
-        letter-spacing: 0.1em;
+        letter-spacing: 0.08em;
 
         .letter {
             // Variable declarations
