--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -28,6 +28,13 @@
 }
 
 @font-face {
+    font-family: 'Barlow-Medium';
+    font-weight: 100 900;
+    font-display: swap;
+    src: url(/fonts/Barlow-Medium.woff2) format('woff2');
+}
+
+@font-face {
     font-family: 'Inter-Reg';
     font-display: swap;
     src: url(/fonts/Inter-Regular.woff2) format('woff2');
