--- a/src/styles/constants.scss
+++ b/src/styles/constants.scss
@@ -5,6 +5,7 @@ $blueGray: #1A202C; // rgb(26, 32, 44);
 $darkGray: #2E2E2E;
 $slate: #1F1F1F;    // rgb(31, 31, 31);
 $black: #101010;
-$yellow: #ffc600;
+$blue: #005bbb;
+$yellow: #ffd500;
 $white: #fff;
 $grite: #d4d2d2;    // rgb(212, 210, 210);
