--- a/src/components/logo/logo.module.scss
+++ b/src/components/logo/logo.module.scss
@@ -1,9 +1,7 @@
 .logo {
     font-family: 'Barlow-Medium', 'Roboto-Condensed-Reg', 'Inter-Reg', BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", -apple-system, sans-serif;
-    .inner {
-        h1 {
-            margin: 0
-        }
+    @media screen and (max-width: 800px) {
+        display: none;
     }
 
     .name {
@@ -39,8 +37,14 @@
             }
         }
       }
-
-      
-
     
+}
+
+.mobile-logo {
+    display: none;
+
+    @media screen and (max-width: 800px){
+        display: block;
+        font-size: 4rem;
+    }
 }
