Basic functioning responsive styling in place. We've got some kind of bug with webkit browsers (firefox) .. having to double click nav elements and no animations on logo. Will look into later. Lets get this deployed.

--- a/src/components/logo/logo.module.scss
+++ b/src/components/logo/logo.module.scss
@@ -41,10 +41,13 @@
 }
 
 .mobile-logo {
-    display: none;
-
+    
+    display: none; 
+    
     @media screen and (max-width: 800px){
+        font-family: 'Barlow-Medium', 'Roboto-Condensed-Reg', 'Inter-Reg', BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", -apple-system, sans-serif;
+        text-shadow: 2px 7px 5px rgba(0,0,0,0.3), 0px -4px 10px rgba(255,255,255,0.3);
         display: block;
-        font-size: 4rem;
+        font-size: 5rem;
     }
-}
+} 
