--- a/src/components/layout/layout.module.scss
+++ b/src/components/layout/layout.module.scss
@@ -15,6 +15,8 @@
 }
 
 .content-container {
+  margin-left: auto;
+  margin-right: auto;
   background: white;
   padding: 1.5rem;
 
@@ -25,6 +27,10 @@
   .content-container { 
     margin: 0;
     padding: 0;
+  }
+  .content-container { 
+    padding-left: 2rem;
+    padding-right: 2rem;
   }
   
 }
