--- a/src/styles/home-page.scss
+++ b/src/styles/home-page.scss
@@ -8,3 +8,10 @@
     justify-content: center;
     align-items: flex-start;
 }
+
+@media screen and (max-width: 800px) {
+    .home-main-section {
+        margin-top: 10rem;
+        margin-bottom: 16rem;
+    }
+}
