--- a/src/templates/post-template/post-template.module.scss
+++ b/src/templates/post-template/post-template.module.scss
@@ -21,3 +21,25 @@
 .blog-post-template-provider {
     margin-top: 6rem;
 }
+
+@media screen and (max-width: 800px) {
+    
+    .blog-post-template-container {
+
+        margin-top: 3rem;
+        
+        h1 {
+            font-size: 3rem;
+        }
+        h2 {
+            font-size: 2.5rem;
+            margin: 0 auto 2rem auto;
+        }
+    }
+
+    .blog-post-template-provider {
+        margin-top: 3rem;
+        margin-bottom: 2rem;
+    }
+    
+  }
