--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -128,3 +128,8 @@
     border-bottom-width: 1px;
     border-bottom-color: var(--grite);
   }
+  
+  // Anchor Footer 
+  footer {
+    margin-top: auto;
+  }
