--- a/src/styles/constants.scss
+++ b/src/styles/constants.scss
@@ -9,3 +9,11 @@ $blue: #005bbb;
 $yellow: #ffd500;
 $white: #fff;
 $grite: #d4d2d2;    // rgb(212, 210, 210);
+
+// Base Constants
+$text: #2D3748;     // rgb(45, 55, 72);
+$heading: #000000;  // rgb(0, 0, 0);
+$background: #ffffff;
+$primary: #A81313;
+$secondary: #5F6C80;
+$divide: #CBD3E0;
