after review, decided the 'custom' fonts we've loaded and used arent really gaining us anything over the system fonts (for apple at least). changed to using sf's and removed fonts from static folder

--- a/src/components/logo/logo.module.scss
+++ b/src/components/logo/logo.module.scss
@@ -1,5 +1,5 @@
 .logo {
-    font-family: 'Barlow-Medium', 'Roboto-Condensed-Reg', 'Inter-Reg', BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", -apple-system, sans-serif;
+    // font-family: 'Barlow-Medium', 'Roboto-Condensed-Reg', 'Inter-Reg', BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", -apple-system, sans-serif;
     @media screen and (max-width: 800px) {
         display: none;
     }
