--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -20,7 +20,7 @@
     --background: #{$background};
     --heading: #{$heading};
 
-    font-family: 'Barlow-Reg', 'Roboto-Condensed-Reg', 'Inter-Reg', BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", -apple-system, sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji"
   }
 
   * {
