Made changes in attempt to pull as much css 'state' as possible up into global.scss and let it cascade, especially in light and dark theme switches. left a few comment-outs in for now.

--- a/src/components/blog-list-item/blog-list-item.module.scss
+++ b/src/components/blog-list-item/blog-list-item.module.scss
@@ -7,7 +7,7 @@
 
 
     a {
-        color: var(--red);
+        color: var(--primary);
         text-decoration: none;
         font-style: bold;
         &:hover {
@@ -17,6 +17,10 @@
     }
 
     
+}
+
+.blog-link {
+    margin-bottom: 1rem;
 }
 
 .blog-list-item-date-tags {
