--- a/src/components/blog-listing/blog-listing.module.scss
+++ b/src/components/blog-listing/blog-listing.module.scss
@@ -3,8 +3,11 @@
     margin-top: 4rem;
     margin-bottom: 16rem;
     width: 100%;
+    
 }
 
 .blog-listing-title {
     border-bottom: 1px solid var(--divide);
+    padding-bottom: 1rem;
+    margin-bottom: 2rem;
 }
