--- a/src/components/nav/nav.module.scss
+++ b/src/components/nav/nav.module.scss
@@ -20,7 +20,7 @@
         align-items: center;
         border-bottom-style: solid;
         border-bottom-width: 1px;
-        border-bottom-color: var(--slate);
+        border-bottom-color: var(--divide);
     }
 
     .nav-item {
@@ -33,7 +33,7 @@
             font-size: 3rem;
             &:hover {
                 text-decoration: none;
-                color: var(--darkRed);
+                // color: var(--darkRed);
             }
             &[aria-current="page"] {
                 color: var(--darkRed);
