--- a/src/styles/constants.scss
+++ b/src/styles/constants.scss
@@ -16,4 +16,4 @@ $heading: #000000;  // rgb(0, 0, 0);
 $background: #ffffff;
 $primary: #A81313;
 $secondary: #5F6C80;
-$divide: #CBD3E0;
+$divide: #9BAAC3;
