--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -2,153 +2,170 @@
 @use "./typography.scss" as *;
 
 :root {
-    --red: #{$red};
-    --darkRed: #{$darkRed};
-    --blueGray: #{$blueGray};
-    --darkGray: #{$darkGray};
-    --black: #{$black};
-    --blue: #{$blue};
-    --slate: #{$slate};
-    --yellow: #{$yellow};
-    --white: #{$white};
-    --grite: #{$grite};
-    // Base Constants
-    --text: #{$text};
-    --primary: #{$primary};
-    --secondary: #{$secondary};
-    --divide: #{$slate};
-    --background: #{$background};
-    --heading: #{$heading};
+  --red: #{$red};
+  --darkRed: #{$darkRed};
+  --blueGray: #{$blueGray};
+  --darkGray: #{$darkGray};
+  --black: #{$black};
+  --blue: #{$blue};
+  --slate: #{$slate};
+  --yellow: #{$yellow};
+  --white: #{$white};
+  --grite: #{$grite};
+  // Base Constants
+  --text: #{$text};
+  --primary: #{$primary};
+  --secondary: #{$secondary};
+  --divide: #{$slate};
+  --background: #{$background};
+  --heading: #{$heading};
 
-    font-family: -apple-system, BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji"
-  }
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"
+}
 
-  * {
+* {
+  margin: 0;
+  padding: 0;
+}
+
+html {
+  color: var(--text);
+  background: var(--background);
+  height: 100%;
+  font-size: 10px;
+}
+
+body {
+  height: 100%;
+  font-size: 2rem;
+
+  @media screen and (max-width: 800px) {
     margin: 0;
     padding: 0;
+    font-size: 1.5rem;
   }
 
-  html {
-    color: var(--text);
-    background: var(--background);
-    height: 100%;
-    font-size: 10px;
-  }
+}
 
-  body {
-    height: 100%;
-    font-size: 2rem;
-    @media screen and (max-width: 800px) {
-      margin: 0;
-      padding: 0;
-      font-size: 1.5rem;
-    }
-      
-  }
+a {
+  text-decoration: none;
+  color: var(--black);
 
-  a {
-    text-decoration: none;
-    color: var(--black);
-    &:hover {
-      text-decoration: underline;
-      color: var(--primary);
-    }
+  &:hover {
+    text-decoration: underline;
+    color: var(--primary);
   }
+}
 
-  fieldset {
-    border-color: rgba(0,0,0,0.1);
-    border-width: 1px;
-  }
+fieldset {
+  border-color: rgba(0, 0, 0, 0.1);
+  border-width: 1px;
+}
 
-  button {
-    background: var(--red);
-    color: white;
-    border: 0;
-    padding: 0.6rem 1rem;
-    border-radius: 2px;
-    cursor: pointer;
-    --cast: 2px;
-    box-shadow: var(--cast) var(--cast) 0 var(--grey);
-    text-shadow: 0.5px 0.5px 0 rgba(0,0,0,0.2);
-    transition: all 0.2s;
-    &:hover {
-      --cast: 4px;
-    }
+button {
+  background: var(--red);
+  color: white;
+  border: 0;
+  padding: 0.6rem 1rem;
+  border-radius: 2px;
+  cursor: pointer;
+  --cast: 2px;
+  box-shadow: var(--cast) var(--cast) 0 var(--grey);
+  text-shadow: 0.5px 0.5px 0 rgba(0, 0, 0, 0.2);
+  transition: all 0.2s;
+
+  &:hover {
+    --cast: 4px;
   }
+}
 
 //   .gatsby-image-wrapper img[src*=base64\\,] {
 //     image-rendering: -moz-crisp-edges;
 //     image-rendering: pixelated;
 //   }
 
-  /* Scrollbar Styles */
-  body::-webkit-scrollbar {
-    width: 12px;
+/* Scrollbar Styles */
+body::-webkit-scrollbar {
+  width: 12px;
+}
+
+html {
+  scrollbar-width: thin;
+  scrollbar-color: var(--slate) var(--white);
+}
+
+body::-webkit-scrollbar-track {
+  background: var(--white);
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: var(--slate);
+  border-radius: 6px;
+  border: 3px solid var(--white);
+}
+
+hr {
+  border: 0;
+  height: 8px;
+  // background-image: url(${stripes});
+  background-size: 1500px;
+}
+
+img {
+  max-width: 100%;
+}
+
+.tilt {
+  transform: rotate(-2deg);
+  position: relative;
+  display: inline-block;
+}
+
+@media (prefers-color-scheme: dark) {
+
+  // Reset constants for dark theme
+  :root {
+    --text: #{$background};
+    --divide: #{$secondary};
   }
+
   html {
+    background: var(--blueGray);
+    color: var(--text);
     scrollbar-width: thin;
-    scrollbar-color: var(--slate) var(--white);
-  }
-  body::-webkit-scrollbar-track {
-    background: var(--white);
-  }
-  body::-webkit-scrollbar-thumb {
-    background-color: var(--slate) ;
-    border-radius: 6px;
-    border: 3px solid var(--white);
+    scrollbar-color: var(--darkGray) var(--darkRed);
   }
 
-  hr {
-    border: 0;
-    height: 8px;
-    // background-image: url(${stripes});
-    background-size: 1500px;
-  }
+  a {
+    color: var(--primary);
 
-  img {
-    max-width: 100%;
-  }
-
-  .tilt {
-    transform: rotate(-2deg);
-    position: relative;
-    display: inline-block;
-  }
-
-  @media (prefers-color-scheme: dark) {
-    // Reset constants for dark theme
-    :root {
-      --text: #{$background};
-      --divide: #{$secondary};
-    }
-
-    html {
-      background: var(--blueGray);
-      color: var(--text);
-      scrollbar-width: thin;
-      scrollbar-color: var(--darkGray) var(--darkRed);
-    }
-
-    a {
-      color: var(--primary);
-      &:hover {
-        color: var(--background);
-      }
+    &:hover {
+      color: var(--background);
     }
   }
 
-  // Global classes for pages/posts
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    color: var(--background);
+  }
+}
 
-  .page-h1-wrapper {
-    width: 100%;
-    margin-top: 1rem;
-    margin-bottom: 3rem;
-    // border-bottom-style: solid;
-    // border-bottom-width: 1px;
-    // border-bottom-color: var(--divide);
-  }
-  
-  // Anchor Footer 
-  footer {
-    margin-top: auto;
-  }
+// Global classes for pages/posts
+
+.page-h1-wrapper {
+  width: 100%;
+  margin-top: 1rem;
+  margin-bottom: 3rem;
+  // border-bottom-style: solid;
+  // border-bottom-width: 1px;
+  // border-bottom-color: var(--divide);
+}
+
+// Anchor Footer 
+footer {
+  margin-top: auto;
+}
