--- a/src/templates/post-template/post-template.module.scss
+++ b/src/templates/post-template/post-template.module.scss
@@ -1,3 +1,13 @@
+h1,h2,h3,h4,h5 {
+    margin: 1rem 0;
+
+    
+}
+
+h1,h2,h3,h4,h5:hover {
+    color: var(--color-primary);
+}
+
 .blog-post-template-container {
     display: grid;
     grid-template-columns: 1fr;
