--- a/src/styles/constants.scss
+++ b/src/styles/constants.scss
@@ -9,6 +9,7 @@ $blue: #005bbb;
 $yellow: #ffd500;
 $white: #fff;
 $grite: #d4d2d2;    // rgb(212, 210, 210);
+$salmon: #FF7272;
 
 // Base Constants
 $text: #2D3748;     // rgb(45, 55, 72);
