--- a/src/components/logo/logo.module.scss
+++ b/src/components/logo/logo.module.scss
@@ -25,7 +25,7 @@
             line-height: 1;
             display: inline-block; // Without this, no transforms will work.
             transform: scale(var(--scale)) translateY(var(--translateY));
-            transition: transform 0.3s linear;
+            transition: transform 0.75s ease-in-out;
 
 
             &:hover {
