--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -12,6 +12,7 @@
   --yellow: #{$yellow};
   --white: #{$white};
   --grite: #{$grite};
+  --salmon: #{$salmon};
   // Base Constants
   --text: #{$text};
   --primary: #{$primary};
@@ -19,6 +20,7 @@
   --divide: #{$slate};
   --background: #{$background};
   --heading: #{$heading};
+  --currLink: #{$primary};
 
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"
 }
@@ -38,6 +40,10 @@ html {
 body {
   height: 100%;
   font-size: 2rem;
+
+  p {
+    font-weight: 500;
+  }
 
   @media screen and (max-width: 800px) {
     margin: 0;
@@ -127,6 +133,8 @@ img {
   :root {
     --text: #{$background};
     --divide: #{$secondary};
+    --primary: #{$salmon};
+    --currLink: #{$background}
   }
 
   html {
