--- a/src/styles/constants.scss
+++ b/src/styles/constants.scss
@@ -12,7 +12,7 @@ $grite: #d4d2d2;    // rgb(212, 210, 210);
 $salmon: #FF7272;
 
 // Base Constants
-$text: #2D3748;     // rgb(45, 55, 72);
+$text: #050505;     // rgb(45, 55, 72);
 $heading: #000000;  // rgb(0, 0, 0);
 $background: #ffffff;
 $primary: #A81313;
