reverting to match the 'minimal blog' design

--- a/src/components/logo/logo.module.scss
+++ b/src/components/logo/logo.module.scss
@@ -6,22 +6,25 @@
     }
 
     .name {
+        span:nth-child(1) {
+            margin-left: 0;
+        }
         // transform: scale(1.1);
         display: block;
         text-shadow: 0.18em 0.18em 0 rgba(0, 0, 0, 0.05);
         perspective: 100px;
         letter-spacing: 0.1em;
+        
 
-        .letter {
+        .word {
             // Variable declarations
             --scale: 1;
             --rotate: 0deg;
             --translateX: 0;
             --translateY: 0;
             --rotateX: 0deg;
-            //////////////////
-            // font-size: 3rem;
-            font-size: 4rem;
+            margin: 0 0.1em;
+            font-size: 3rem;
             line-height: 1;
             display: inline-block; // Without this, no transforms will work.
             transform: scale(var(--scale)) translateY(var(--translateY));
